# regen

./: Cargo.toml  README.md
src/: appending_iterators.rs  lib.rs  main.rs
